--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-node_modules
-dist
-*.log
+node_modules/
+dist/
 .env
-.env.local
-.env.*.local
-coverage
+*.log
 .DS_Store
-*.lock
-pnpm-lock.yaml
-.idea
-.vscode
-*.swp
-*.swo
-*~
-tsconfig.tsbuildinfo
+
+sounds/*
+!sounds/.gitkeep
