--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DISCORD_TOKEN=your_bot_token_here
 DISCORD_CLIENT_ID=your_client_id_here
 DISCORD_GUILD_ID=
+
+WEB_ENABLED=false
+WEB_PORT=3000
+WEB_API_KEY=your-secret-key-here
