--- a/package.json
+++ b/package.json
@@ -31,8 +31,17 @@
   "dependencies": {
     "@discordjs/opus": "0.10.0",
     "@discordjs/voice": "0.19.0",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/multipart": "^9.3.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@snazzah/davey": "^0.1.7",
     "discord.js": "14.24.2",
-    "dotenv": "17.2.3"
+    "dotenv": "17.2.3",
+    "fastify": "^5.6.1",
+    "fastify-plugin": "^5.1.0",
+    "fastify-type-provider-zod": "^6.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "24.9.2",
