--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:all": "pnpm build && cd web && pnpm build",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "deploy": "tsx src/deploy-commands.ts",
@@ -33,6 +34,7 @@
     "@discordjs/voice": "0.19.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "^9.3.0",
+    "@fastify/static": "^8.0.1",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
     "@snazzah/davey": "^0.1.7",
