--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "fastify": "^5.6.1",
     "fastify-plugin": "^5.1.0",
     "fastify-type-provider-zod": "^6.1.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
